--- a/app/views/project/projectsList.scala.html
+++ b/app/views/project/projectsList.scala.html
@@ -36,7 +36,7 @@
             <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
         }
 
-        <a class="btn success" id="add" href="@routes.Materials.create(compID)">Dodaj materiał</a>
+        <a class="btn success" id="addMaterial" href="@routes.Materials.create(compID)">Dodaj materiał</a>
         <a class="btn success" id="add" href="@routes.Projects.create(compID)">Dodaj projekt</a>
         
     </div>
