insert mat issue

--- a/app/views/account/editForm.scala.html
+++ b/app/views/account/editForm.scala.html
@@ -32,7 +32,7 @@
         
         <div class="actions">
             <input type="submit" value="Zapisz" class="btn primary"> albo
-            <a href="@routes.Users.list()" class="btn">Anuluj</a> 
+            <a href="@routes.ResolveUser.index" class="btn">Anuluj</a> 
         </div>
         
     }
