local server version

--- a/app/views/account/list.scala.html
+++ b/app/views/account/list.scala.html
@@ -67,7 +67,7 @@
                                 @account.position
                             </td>
                             <td>
-                                @company.name
+                                <a href="@routes.Companies.edit(company.id.get)">@company.name</a>
                             </td>
                              <td>
                                 @company.city
