--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -86,6 +86,10 @@
   <strong>Kontakt</strong><br>
   <a href="mailto:#">rafal.masal@@gmail.com</a>
 </address>
+
+<address>
+Promotor:<strong> dr Jerzy Bartoszek</strong><br>
+</address>
 </div>
 
   </body>
