--- a/app/views/project/operatorProjList.scala.html
+++ b/app/views/project/operatorProjList.scala.html
@@ -1,20 +1,20 @@
-@(currentPage: Page[(Account, Company)], currentOrderBy: Int, currentFilter: String)(implicit flash: play.api.mvc.Flash)
+@(currentPage: Page[(Project, Account)], currentOrderBy: Int, currentFilter: String, compID: Long)(implicit flash: play.api.mvc.Flash)
 
 @****************************************
 * Helper generating navigation links    *
 ****************************************@
 @link(newPage: Int, newOrderBy: Option[Int] = None) = @{
-    routes.Users.list(newPage, newOrderBy.map { orderBy =>
+    routes.Projects.operatorProjList(compID, newPage, newOrderBy.map { orderBy =>
         if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
     }.getOrElse(currentOrderBy), currentFilter)
     
 }
-
 @**********************************
 * Helper generating table headers *
 ***********************************@
 @header(orderBy: Int, title: String) = {
-    <th class="col@orderBy header @if(scala.math.abs(currentOrderBy) == orderBy) @{if(currentOrderBy < 0) "headerSortDown" else "headerSortUp"}">
+    <th class="col@orderBy header @if(scala.math.abs(currentOrderBy) == orderBy) @{if(currentOrderBy < 0) 
+        "headerSortDown" else "headerSortUp"}">
         <a href="@link(0, Some(orderBy))">@title</a>
     </th>
 }
@@ -22,7 +22,7 @@
 
 @main {
     
-    <h1>@Messages("users.list.title", currentPage.total)</h1>
+    <h1>@Messages("opProjects.list.title", currentPage.total)</h1>
 
     @flash.get("success").map { message =>
         <div class="alert-message warning">
@@ -32,58 +32,63 @@
 
     <div id="actions">
         
-        @helper.form(action=routes.Users.list()) {
+        @helper.form(action=routes.Projects.projList(compID)) {
             <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Szukaj po nazwie...">
             <input type="submit" id="searchsubmit" value="Szukaj" class="btn primary">
         }
-
-        <a class="btn success" id="add" href="@routes.Companies.create()">Dodaj Firmę</a>
-        <a class="btn success" id="add1" href="@routes.Users.create()">Dodaj użytkownika</a>
+        
+      
         
     </div>
     
-    @Option(currentPage.items).filterNot(_.isEmpty).map { users =>
+    @Option(currentPage.items).filterNot(_.isEmpty).map { projects =>
         
-        <table class="users zebra-striped">
+        <table class="projects zebra-striped">
             <thead>
                 <tr>
                     @header(2, "Nazwa")
-                    @header(3, "Adres e-mail")
-                    @header(4, "Stanowisko")
-                    @header(5, "Firma")
-                    @header(6, "Miejscowość")
-                    @header(7, "Telefon")
+                    @header(3, "Data zakończenia")
+                    @header(4, "Zamówione")
+                    @header(5, "Gotowe")
+                    @header(6, "Pobrany materiał")
+                    @header(7, "Wykonanie")
                 </tr>
             </thead>
             <tbody>
-                @users.map { 
-                    case (account, company) => {
+
+                @projects.map { 
+                    case (project, account) => {
                         <tr>
                             <td>
-                            @if(account.name == "Robert Adamski") {
-                            @account.name
-                        } else {
-                                <a href="@routes.Users.edit(account.id.get)">@account.name</a>
-                                }
+                            @project.name
+                             @if(project.doneParts.get == 0 && project.doneParts.get != project.ordered.get) { 
+                                  <em>Oczekuje</em>
+                             }
                             </td>
                             <td>
-                                @account.email
+                                @project.endDate
                             </td>
                             <td>
-                                @account.position
+                                @project.ordered
                             </td>
                             <td>
-                            @if(account.permission == "Administrator") {
-                            @company.name
-                        } else {
-                                <a href="@routes.Companies.edit(company.id.get)">@company.name</a>
-                                }
+                             @if(project.doneParts.get >= project.ordered.get ) {
+                                @project.doneParts
+                                <em>Zakończony</em>
+                            } else {
+                                 @project.doneParts  
+                                <a class="center" href="@routes.Projects.editDoneParts(project.id.get)">Podaj liczbę</a>
+                            }
                             </td>
-                             <td>
-                                @company.city
+                            <td>
+                                @if(project.doneParts.get >= project.ordered.get ) {
+                                @project.matAmount
+                            } @**else { 
+                                <a href="@routes.Projects.editMaterial(project.id.get)"> @project.matAmount</a>
+                            } **@
                             </td>
-                             <td>
-                                @company.phone
+                            <td>
+                                @account.name
                             </td>
                         </tr>
                     }
@@ -104,7 +109,7 @@
                     </li>
                 }
                 <li class="current">
-                    <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + users.size) of @currentPage.total</a>
+                    <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + projects.size) of @currentPage.total</a>
                 </li>
                 @currentPage.next.map { page =>
                     <li class="next">
@@ -121,7 +126,7 @@
     }.getOrElse {
         
         <div class="well">
-            <em>Nie ma użytkownika</em>
+            <em>Nie ma projektu</em>
         </div>
         
     }
